src/test/ui/imports/import-prefix-macro-2.stderr
error: expected identifier, found `a::b::c`
  --> $DIR/import-prefix-macro-2.rs:11:26
   |
LL |     ($p: path) => (use ::$p {S, Z});
   |                          ^^ expected identifier
...
LL | import! { a::b::c }
   | ------------------- in this macro invocation

error: aborting due to previous error

